[metadata]
name = napari-zarr-writer
version = 0.0.1
author = Tom Burke, Joel Lüthi, Christopher Nauroth-Kreß, Benjamin Rombaut
author_email = burke@mpi-cbg.de, joel.luethi@uzh.ch, Nauroth_C@ukw.de, benjamin.rombaut@gmail.com

license = BSD-3-Clause
description = Napari plugin to write zarr files
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-zarr-writer = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-zarr-writer = napari_zarr_writer:napari.yaml
